--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -9,30 +9,50 @@
             integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" 
             crossorigin="anonymous">
         <script src="https://unpkg.com/jquery"></script>
+        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="../static/app.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a href="#" class="navbar-brand">Your Reading Companion</a>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="#" class="nav-link" aria-current="page">Home</a>
+                            <a href="/" class="nav-link" aria-current="page">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link" aria-current="page">Books</a>
+                            <a href="/books" class="nav-link" aria-current="page">Books</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link" aria-current="page">Book Club</a>
+                            <a href="/bookclub" class="nav-link" aria-current="page">Book Club</a>
+                        </li>
+                        {% if not g.user %}
+                        <li class="nav-item">
+                            <a href="/users/signup" class="nav-link">Sign Up</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link" aria-current="page">Logout</a>
+                            <a href="/users/signin" class="nav-link" aria-current="page">Login</a>
                         </li>
+                        {% else %}
+                        <li class="nav-item">
+                            <a href="/users/signout" class="nav-link" aria-current="page">Logout</a>
+                        </li>
+                        {% endif %}
                     </ul>
+                    {% if g.user %}
+                    <div class="nav-item">
+                        <h6 class="my-1"><a href="/users/{{g.user.id}}" class="nav-link text-secondary">{{g.user.username}}</a></h6>
+                    </div>
+                    {% endif%}
                 </div>
             </div>
         </nav>
+        <div class="container">
+            {% for category, message in get_flashed_messages(with_categories=True) %}
+                <div class="alert alert-{{category}} bg-{{category}} text-light">{{message}}</div>
+            {% endfor %}
+        </div>
         {% block content %} {% endblock %}
         <script src="https://unpkg.com/axios/dist/axios.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" 
