--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -10,7 +10,7 @@
                         <a href="/books/check/{{result[0]['volumeInfo']['title']}}">
                             <img src="{{result[0]['volumeInfo']['imageLinks']['thumbnail']}}" 
                                 alt="{{result[0]['volumeInfo']['title']}}" 
-                                class="card-img-top">
+                                class="card-img-top bookcover">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">{{result[0]['volumeInfo']['title']}}</h5>
