--- a/application/templates/user/user_page.html
+++ b/application/templates/user/user_page.html
@@ -10,19 +10,31 @@
     <h5>{{g.user.role}}</h5>
     <div>
         <h3>Library</h3>
-        {% if books %}
-            {% for book in books %}
-                <a href="/books/{{book.id}}">
-                    <div class="card col-3">
-                        <img src="{{book.img}}" alt="{{book.title}}" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">{{book.title}}</h5>
-                            <p class="card-text">{{book.description}}</p>
+                {% if books %}
+                    {% for book in books %}
+                        <div class="container mw-100 mb-3">
+                            <div class="row">
+                                <div class="col-1 pl-2">
+                                    <a href="/books/{{book.id}}">
+                                        <img src="{{book.image}}" alt="{{book.title}}" class="card-img-top bookcover">
+                                    </a>
+                                </div>
+                                <div class="col-1">
+                                    <h5>{{book.title}}</h5>
+                                </div>
+                                <div class="col-1">
+                                    <h6>Author Name Goes Here</h6>
+                                </div>
+                                <div class="col-8">
+                                    <p>{{book.description}}</p>
+                                </div>
+                                <div class="col-1">
+                                    <a href="/users/{{g.user.id}}/library/remove/{{book.id}}" class="btn btn-danger">Remove</a>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            {% endfor %}
-        {% endif %}
+                    {% endfor %}
+                {% endif %}
     </div>
 {% endblock %}
 {% block scripts %}
