--- a/application/templates/book/book_review.html
+++ b/application/templates/book/book_review.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-{% block title %}{% endblock %}
+{% block title %}Review {{book.title}}{% endblock %}
 {% block content %}
     <div class="container-fluid text-center">
+        <h2>Add a review for {{book.title}}</h2>
         <form method="POST">
             {{ form.hidden_tag() }}
 
@@ -13,7 +14,7 @@
                     {{ field(placeholder=field.label.text, class="form-group col-4 offset-4 my-2 self-align-center")}}
                 </div>
             {% endfor %}
-            <button class="btn btn-lg btn-secondary mt-3">Validate</button>
+            <button class="btn btn-lg btn-success mt-3">Submit</button>
         </form>
     </div>
 {% endblock %}
