--- a/application/templates/book/details.html
+++ b/application/templates/book/details.html
@@ -3,12 +3,65 @@
 {% block content %}
     <div class="container">
         <div class="row mx-auto">
-            <img src="{{book.image}}" alt="{{book.title}}" id="book_cover" class="img-fluid max-width: 25%">
-            <h3 class="text-center" id="title">{{book.title}}</h3>
-            <h4 class="text-center" id="author">{{author.author_first_name}} {{author.author_last_name}}</h4>
-            <div id="desc_para">
-                <p class="text-left" id="description">{{book.description}}</p>
+            <div class="container">
+                <div class="row">
+                    <img src="{{book.image}}" alt="{{book.title}}" id="book_cover" class="bookcover">
+                    <h3 class="text-center" id="title">{{book.title}}</h3>
+                    <h4 class="text-center" id="author">{{book.author.author_name}}</h4>
+                    <div id="desc_para">
+                        <p class="text-left" id="description">{{book.description}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-3">
+                <a href="/users/{{g.user.id}}/library/check/{{book.title}}" class="btn btn-primary my-2">Add to library</a>
+            </div>
+            <div class="col-3">
+                <a href="/books/{{book.id}}/add-review" class="btn btn-success my-2">Write a review</a>
+            </div>
+            <div class="col-3">
+                <a href="" class="btn btn-info my-2">Create a club</a>
             </div>
         </div>
     </div>
+    {% if reviews %}
+        <div class="container mt-3">
+            <div class="row">
+                <div class="col-2">
+                    <h5>Rating</h5>
+                </div>
+                <div class="col-2">
+                    <h5>Review Title</h5>
+                </div>
+                <div class="col-6">
+                    <p>Review</p>
+                </div>
+            </div>
+        </div>
+        {% for review in reviews %}
+            <div class="container mt-3">
+                <div class="row">
+                    <div class="col-2">
+                        <h5>{{review.rating}}</h5>
+                    </div>
+                    <div class="col-2">
+                        <h5>{{review.title}}</h5>
+                    </div>
+                    <div class="col-6">
+                        <p>{{review.review}}</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                        <h6>{{g.user.username}}</h6>
+                    </div>
+                    <div class="col-4">
+                        <p>{{review.review_date}}</p>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    {% endif %}
 {% endblock %}
