Added functionality for the book club form. Now when starting your book club you can add a title, add the body of the initial post and validate the book you're starting the book_club about. Can't pull form data at this time for some reason.

--- a/application/templates/book_club/book_club_post.html
+++ b/application/templates/book_club/book_club_post.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}{% endblock %}
+{% block title %}Create a Book Club{% endblock %}
 {% block content %}
-    <div class="container-fluid text-center">
+    <div class="container-fluid text-center" id="bookclub_post_form">
         <form method="POST">
             {{ form.hidden_tag() }}
 
@@ -13,10 +13,15 @@
                     {{ field(placeholder=field.label.text, class="form-group col-4 offset-4 my-2 self-align-center")}}
                 </div>
             {% endfor %}
-            <button class="btn btn-lg btn-secondary mt-3">Validate</button>
+            <button class="btn btn-lg btn-secondary mt-3" id="validate">Validate</button>
         </form>
+    </div>
+    <div class="container">
+        <div class="row" id="book_val">
+
+        </div>
     </div>
 {% endblock %}
 {% block scripts %}
-
+    <script src="/static/app.js"></script>
 {% endblock %}
