--- a/application/templates/user/signin.html
+++ b/application/templates/user/signin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Signup{% endblock %}
+{% block title %}Signin{% endblock %}
 {% block content %}
     <div class="container-fluid text-center">
         <h2>User Signin</h2>
