--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -27,6 +27,11 @@
                         <li class="nav-item">
                             <a href="/bookclub" class="nav-link" aria-current="page">Book Club</a>
                         </li>
+                        {% if g.user.role == 'admin'%}
+                        <li class="nav-item">
+                            <a href="/admin" class="nav-link" aria-current="page">Administration</a>
+                        </li>
+                        {% endif %}
                         {% if not g.user %}
                         <li class="nav-item">
                             <a href="/users/signup" class="nav-link">Sign Up</a>
