--- a/application/templates/book/all_books.html
+++ b/application/templates/book/all_books.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{% endblock %}
+{% block title %}Search for books{% endblock %}
 {% block content %}
     <form method="POST">
         {{ form.hidden_tag() }}
