--- a/application/templates/admin/admin_home.html
+++ b/application/templates/admin/admin_home.html
@@ -4,16 +4,22 @@
     <h1 class="text-center">Welcome to your administration page {{g.user.username}}!</h1>
     <div class="container mt-5">
         <div class="row my-3 justify-content-center">
-            <a href="/admin_reviews" class="btn btn-outline-secondary col-3">Pending Book Reviews</a>
+            <span class="col-4 text-center">
+                <a href="admin/admin_reviews" class="btn btn-outline-secondary">Pending Book Reviews</a><i class="{% if num_reviews > 0 %}bg-danger{% else %}bg-info{% endif %} h6 rounded mx-2 p-1">{{num_reviews}}</i>
+            </span>
         </div>
         <div class="row my-3 justify-content-center">
-            <a href="/admin_club_requests" class="btn btn-outline-secondary col-3">Requested Clubs</a>
+            <span class="col-4 text-center">
+                <a href="admin/admin_club_requests" class="btn btn-outline-secondary">Requested Clubs</a><i class="{% if num_requests > 0 %}bg-danger{% else %}bg-info{% endif %} h6 rounded mx-2 p-1">{{num_requests}}</i>
+            </span>
         </div>
         <div class="row my-3 justify-content-center">
-            <a href="/admin_club_comments" class="btn btn-outline-secondary col-3">Pending Club Comments</a>
+            <span class="col-4 text-center">
+                <a href="admin/admin_club_comments" class="btn btn-outline-secondary">Pending Club Comments</a><i class="{% if num_comments > 0 %}bg-danger{% else %}bg-info{% endif %} h6 rounded mx-2 p-1">{{num_comments}}</i>
+            </span>
         </div>
         <div class="row my-3 justify-content-center">
-            <a href="/admin_user_updates" class="btn btn-outline-secondary col-3">Account Settings</a>
+            <a href="admin/admin_user_updates" class="btn btn-outline-secondary col-2">Account Settings</a>
         </div>
     </div>
 {% endblock %}
