Worked on the comments section today and got them working. Worked with mentor on making it so the books that start with # can be selected. Added to the todo list.

--- a/application/static/app.css
+++ b/application/static/app.css
@@ -19,3 +19,11 @@ body{
     width: 45%;
     margin-top: 15px;
 }
+.addreview{
+    background-color: darkslategray;
+    color: blanchedalmond;
+}
+.removefromlibrary{
+    background-color: firebrick;
+    color: blanchedalmond;
+}
