--- a/application/templates/user/user_page.html
+++ b/application/templates/user/user_page.html
@@ -29,8 +29,8 @@
                                     <p>{{book.description}}</p>
                                 </div>
                                 <div class="col-1">
-                                    <a href="/books/{{book.id}}/add-review" class="btn btn-success my-1">Add Review</a>
-                                    <a href="/users/{{g.user.id}}/library/remove/{{book.id}}" class="btn btn-danger my-1">Remove</a>
+                                    <a href="/books/{{book.id}}/add-review" class="btn addreview my-1">Add Review</a>
+                                    <a href="/users/{{g.user.id}}/library/remove/{{book.id}}" class="btn removefromlibrary my-1">Remove</a>
                                 </div>
                             </div>
                         </div>
