--- a/application/templates/book/all_books.html
+++ b/application/templates/book/all_books.html
@@ -13,7 +13,7 @@
         </div>
         {% endif %}
         <div class="container">
-            <div class="row">
+            <div class="row mb-5">
                 <div class="col text-center">
                     <button class="btn btn-lg btn-success mt-3 mx-auto" id="search">Search</button>
                 </div>
@@ -21,8 +21,24 @@
         </div>     
     </form>
     <div class='container' id='top_books'>
-        <div class="row" id='top_book_row'>
-        </div>
+        {% if books %}
+            {% for book in books %}
+                <div class="row my-2" id='top_book_row'>
+                    <div class="col-3">
+                        <a href="/books/{{book.id}}"><img src="{{book.image}}" alt="{{book.title}}" class="self-align-center"></a>
+                    </div>
+                    <div class="col-2">
+                        <p class="self-align-center"><strong>{{book.title}}</strong></p>
+                    </div>
+                    <div class="col-2">
+                        <p class="self-align-center">{{book.author.author_name}}</p>
+                    </div>
+                    <div class="col-5">
+                        <p>{{book.description}}</p>
+                    </div>
+                </div>
+            {% endfor %}
+        {% endif %}
     </div>
 {% endblock %}
 {% block scripts %}
