--- a/application/templates/book_club/book_club.html
+++ b/application/templates/book_club/book_club.html
@@ -2,23 +2,36 @@
 {% block title %}{% endblock %}
 {% block content %}
 <div class="container">
-    <div class="row border border-dark p-2">
-        {% for club in clubs %}
-            {% if club.reviewed %}    
-                <div class="row">
-                    <div class="col-4">
-                        Image
+    <div class="row text-center my-4">
+        <h3 class=""><strong>Find a book that you'd like to have a discussion on <a href="/books" class="text-secondary">here</a>!</strong></h3>
+    </div>
+</div>
+<div class="container">
+    {% for club in clubs %}
+        {% if club.reviewed %}    
+            <div class="row text-center p-2 my-2">
+                <div class="col-2">
+                    <a href="/bookclub/{{club.id}}"><img src="{{club.book.image}}" alt="{{club.book.title}}"></a>
+                </div>
+                <div class="col-4">
+                    <div class="row">
+                        <div>
+                            <p class="self-align-center"><strong>{{club.discussion_title}}</strong></p>
+                        </div>
                     </div>
-                    <div class="col-4">
-                        {{club.discussion_title}}
-                    </div>
-                    <div class="col-4">
-                        {{club.discussion_posted_date}}
+                    <div class="row">
+                        <div>
+                            <p class="self-align-center">{{club.discussion_body}}</p>
+                        </div>
                     </div>
                 </div>
-            {% endif %}
-        {% endfor %}
-    </div>
+                <div class="col-4">
+                    {{club.discussion_posted_date}}
+                </div>
+            </div>
+        {% endif %}
+    {% endfor %}
+</div>
 
 
 {% endblock %}
