finished the bulk of the work. May have missed a few things that I will clean up before turning in the next section. Updated scripts to include the new admin setup. Admin is in need of an update, but otherwise people are in control of their own things. Updated the home page so it won't shome page so it wont anything until a user starts adding books and clubs.

--- a/application/static/app.css
+++ b/application/static/app.css
@@ -6,7 +6,7 @@ body{
     margin: 1% auto;
 }
 #book_cover{
-    width: 25%;
+    width: 10%;
     height: auto;
     margin: 10px auto;
 }
@@ -26,4 +26,8 @@ body{
 .removefromlibrary{
     background-color: firebrick;
     color: blanchedalmond;
+}
+
+#book-review{
+    text-indent: 50px;
 }
