--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -9,8 +9,7 @@
             integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" 
             crossorigin="anonymous">
         <script src="https://unpkg.com/jquery"></script>
-        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../static/app.css">
+        <link rel="stylesheet" href="/static/app.css">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light">
