--- a/application/templates/book/all_books.html
+++ b/application/templates/book/all_books.html
@@ -21,14 +21,15 @@
         </div>     
     </form>
     <div class='container' id='top_books'>
+        <div class="row my-2" id="top_book_row"></div>
         {% if books %}
             {% for book in books %}
-                <div class="row my-2" id='top_book_row'>
+                <div class="row my-2">
                     <div class="col-3">
-                        <a href="/books/{{book.id}}"><img src="{{book.image}}" alt="{{book.title}}" class="self-align-center"></a>
+                        <a href="/books/{{book.id}}"><img src="{{book.image}}" alt="{{book.title}}" class="img-fluid rounded w-50"></a>
                     </div>
                     <div class="col-2">
-                        <p class="self-align-center"><strong>{{book.title}}</strong></p>
+                        <p class="self-align-center"><strong>{{book.title.title()}}</strong></p>
                     </div>
                     <div class="col-2">
                         <p class="self-align-center">{{book.author.author_name}}</p>
