--- a/application/templates/book_club/book_club.html
+++ b/application/templates/book_club/book_club.html
@@ -8,10 +8,9 @@
 </div>
 <div class="container">
     {% for club in clubs %}
-        {% if club.reviewed %}    
             <div class="row text-center p-2 my-2">
-                <div class="col-2">
-                    <a href="/bookclub/{{club.id}}"><img src="{{club.book.image}}" alt="{{club.book.title}}"></a>
+                <div class="col-4">
+                    <a href="/bookclub/{{club.id}}"><img src="{{club.book.image}}" alt="{{club.book.title}}" class="img-fluid rounded w-50"></a>
                 </div>
                 <div class="col-4">
                     <div class="row">
@@ -29,7 +28,6 @@
                     {{club.discussion_posted_date}}
                 </div>
             </div>
-        {% endif %}
     {% endfor %}
 </div>
 
